SPMS-239 Some small README updates

--- a/README.adoc
+++ b/README.adoc
@@ -7,10 +7,17 @@ Currently the client implements all factomd and factom-walletd lowlevel API call
 The client consists of several modules to support the following use cases:
 
 * Java Standard Edition &gt;= 1.8
-* Java Enterprise Edition (JEE): IoC, Managed Threads, javax.json
-* Spring (boot): IoC, Managed Threads, Configuration
+* Java Enterprise Edition (JEE)
+** Dependency Injection
+** Managed Threads
+** JSON processing using javax.json
+* Spring (boot)
+** Dependency Injection
+** Managed Threads
+** Configuration
 
 To minimize dependencies and allow the implementor to choose, it has plugable JSON (de)serialization support
+
 * GSON
 * JEE (javax.json)
 * Jackson (not implemented yet)
@@ -19,4 +26,4 @@ Whenever one of the JSON plugins is on the classpath it will use that plugin to 
 
 == Active Development
 
-*Important*: This software still is in early development stage. As such you should expect breaking changes in APIs.
+IMPORTANT: This software still is in early development stage. As such you should expect breaking changes in APIs.
