--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
 = Factom Java
 
+image::https://github.com/bi-foundation/factom-java/workflows/Java%20CI%20with%20Gradle/badge.svg?branch=develop[Java CI with Gradle]
+
 A Factom Java enterprise client to interact with Factom. Please see the docs module for documentation.
 
 Currently the client implements all factomd and factom-walletd lowlevel API calls both synchronously and asynchronously. Higher level functions are being worked on.
