--- a/CHANGELOG.adoc
+++ b/CHANGELOG.adoc
@@ -12,17 +12,22 @@ endif::[]
 This document provides a high-level overview of the changes introduced in Factom-Java by release.
 For a detailed view of what has changed, refer to our {uri-repo}/commits/master[commit history] on GitHub.
 
-== 0.4.0 - not released yet
+== 0.4.1 - not released yet
 
-This release adds offline transaction composition support for factoid (multi input and multi output)
+== 0.4.0 - release date 20210817
+
+This release adds offline transaction composition support for factoids (multi input and multi output)
+It also contains some small fixes.
 
 Added::
 * Offline Transaction Composition support
+* Redeem Condition support
 Changed::
 * Add dependency on i2p crypto library from API module.
 Deprecated::
 Removed::
 Fixed::
+* Human/hex address corner cases fixed
 Security::
 -
 
